Table propiedades {
id int [pk, increment]
tipo varchar(50)
direccion varchar(100)
precio decimal(10,2)
descripcion text
estado varchar(50)
}


Table inquilinos {
    id int [pk, increment]
    nombres varchar(100)
    email varchar(100)
    telefono varchar(20)
    fecha_nacimiento date
    documento_identidad varchar(50)

}

Table contratos {
    id int[pk, increment]
    propiedad_id int[ref: > propiedades.id]
    inquilino_id int[ref: > inquilinos.id]
    fecha_inicio date
    fecha_fin date
    monto_renta date
    estado varchar(50)

}